--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
+    "launch": "concurrently \"json-server --watch mockapi.json --port 3000\" \"expo start\"",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -17,6 +18,7 @@
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "json-server": "^1.0.0-alpha.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
